# token-stratosphere

./: .gitignore  Cargo.toml  README.md  mantrachaind-cli.env  optimize.sh  validator.json
artifacts/: checksums.txt  stratocoin.wasm
deployer/: .env  index.js  index.ts  package-lock.json  package.json
src/: lib.rs  msg.rs  state.rs
